[gd_scene load_steps=7 format=3 uid="uid://1suqpdc322yl"]

[ext_resource type="Script" path="res://Scenes/Enemies/Level 1 Boss/boss_bullet.gd" id="1_f0ot3"]
[ext_resource type="Texture2D" uid="uid://i66ic0nv47dx" path="res://Assets/Tiles/Bossbullet.png" id="1_l8iyj"]
[ext_resource type="Texture2D" uid="uid://cancdqcbgv6gf" path="res://Assets/Tiles/tile_0008.png" id="3_02dp1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m1p23"]
radius = 8.0

[sub_resource type="Animation" id="Animation_nogkv"]
resource_name = "explode"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BulletSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yhbt1"]
_data = {
"explode": SubResource("Animation_nogkv")
}

[node name="BossBullet" type="Area2D"]
texture_filter = 1
script = ExtResource("1_f0ot3")

[node name="BulletSprite" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_l8iyj")

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
scale = Vector2(1.75, 1.75)
texture = ExtResource("3_02dp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_m1p23")

[node name="BulletAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yhbt1")
}

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
